pollux-windy:enable zram & zsmalloc(defconfig)
Change-Id: I404d62131810d4ab7894c14cd635b138a99448d0

--- a/arch/arm/configs/fusion3_pollux_windy_defconfig
+++ b/arch/arm/configs/fusion3_pollux_windy_defconfig
@@ -24,6 +24,8 @@ CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
+CONFIG_BLOCK=y
+CONFIG_MMU=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
@@ -278,6 +280,7 @@ CONFIG_CMA=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_ZRAM=y
+CONFIG_ZSMALLOC=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_UID_CPUTIME=y
 CONFIG_UID_STAT=y
@@ -532,6 +535,7 @@ CONFIG_SPS_SUPPORT_BAMDMA=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_IOMMU=y
 CONFIG_CORESIGHT=y
+CONFIG_SYSFS=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT3_FS=y
@@ -577,6 +581,7 @@ CONFIG_SECURITYFS=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
+CONFIG_CRYPTO=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_CTR=y
 CONFIG_CRYPTO_XCBC=y
