--- a/arch/arm/configs/fusion3_pollux_windy_defconfig
+++ b/arch/arm/configs/fusion3_pollux_windy_defconfig
@@ -7,7 +7,7 @@ CONFIG_TASK_DELAY_ACCT=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_AUDIT=y
-CONFIG_RCU_FAST_NO_HZ=y
+# CONFIG_RCU_FAST_NO_HZ is not set
 CONFIG_RCU_BOOST=y
 CONFIG_IKCONFIG=y
 CONFIG_CGROUPS=y
@@ -40,9 +40,9 @@ CONFIG_MODVERSIONS=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
-CONFIG_IOSCHED_BFQ=y
-CONFIG_CGROUP_BFQIO=y
-CONFIG_DEFAULT_NOOP=y
+# CONFIG_IOSCHED_BFQ is not set
+# CONFIG_CGROUP_BFQIO is not set
+CONFIG_DEFAULT_CFQ=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_ARCH_APQ8064=y
@@ -119,7 +119,6 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
@@ -287,6 +286,8 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_ZRAM=y
 CONFIG_ZSMALLOC=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
+CONFIG_ZPOOL=y
+CONFIG_Z3FOLD=y
 CONFIG_UID_CPUTIME=y
 CONFIG_UID_STAT=y
 CONFIG_HAPTIC_ISA1200=y
