--- a/arch/arm/configs/fusion3_pollux_windy_defconfig
+++ b/arch/arm/configs/fusion3_pollux_windy_defconfig
@@ -42,7 +42,7 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
 # CONFIG_IOSCHED_BFQ is not set
 # CONFIG_CGROUP_BFQIO is not set
-CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_FIOPS=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_ARCH_APQ8064=y
