--- a/arch/arm/configs/fusion3_pollux_windy_defconfig
+++ b/arch/arm/configs/fusion3_pollux_windy_defconfig
@@ -284,6 +284,7 @@ CONFIG_SW_SYNC=y
 CONFIG_CMA=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
+CONFIG_SWAP=y
 CONFIG_ZRAM=y
 CONFIG_ZSMALLOC=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
