fusion3_pollux_windy_defconfig:set default I/O scheduler cfq
Change-Id: I75f1b36c37b5b8ea4ae7538162324390212cc21d

--- a/arch/arm/configs/fusion3_pollux_windy_defconfig
+++ b/arch/arm/configs/fusion3_pollux_windy_defconfig
@@ -42,8 +42,8 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
 # CONFIG_IOSCHED_BFQ is not set
 # CONFIG_CGROUP_BFQIO is not set
-CONFIG_DEFAULT_IOSCHED="fiops"
-CONFIG_DEFAULT_FIOPS=y
+CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_CFQ=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_ARCH_APQ8064=y
